--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.22.3",
     "react-simple-captcha": "^9.3.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
