--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
+    "@tanstack/react-query": "^5.32.1",
+    "axios": "^1.6.8",
     "country-flag-icons": "^1.5.11",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
@@ -20,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.0",
     "react-parallax": "^3.5.1",
     "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
@@ -29,6 +34,8 @@
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
+ 
+
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
