--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@headlessui/react": "^1.7.19",
     "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@tanstack/react-query": "^5.32.1",
     "axios": "^1.6.8",
+    "classnames": "^2.5.1",
     "country-flag-icons": "^1.5.11",
     "firebase": "^10.11.1",
     "localforage": "^1.10.0",
