--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@headlessui/react": "^1.7.19",
+    "@react-google-maps/api": "^2.19.3",
     "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
@@ -21,14 +22,16 @@
     "country-flag-icons": "^1.5.11",
     "firebase": "^10.11.1",
     "gps-tracking": "^1.1.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-parallax": "^3.5.1",
     "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
