--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "classnames": "^2.5.1",
     "country-flag-icons": "^1.5.11",
     "firebase": "^10.11.1",
+    "google-translate-api": "^2.3.0",
     "gps-tracking": "^1.1.1",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
+    "logrocket": "^8.1.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
@@ -34,6 +36,7 @@
     "react-leaflet": "^4.2.1",
     "react-parallax": "^3.5.1",
     "react-phone-input-2": "^2.15.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-simple-captcha": "^9.3.1",
